Correct margins and svg icons on mobile index page

--- a/source/less/blocks/banner.less
+++ b/source/less/blocks/banner.less
@@ -36,7 +36,7 @@
 
 .banner__text {
   margin: 0;
-  margin-bottom: 29px;
+  margin-bottom: 30px;
 
   font-size: 14px;
   line-height: 14px;
