--- a/source/less/blocks/goal.less
+++ b/source/less/blocks/goal.less
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
 
-  padding: 29px 20px 8px 18px;
+  padding: 28px 20px 5px 20px;
 
   color: @color-text-sub;
 
@@ -52,7 +52,7 @@
   .reset-header();
 
   margin-left: 70px;
-  margin-bottom: 31px;
+  margin-bottom: 30px;
 
   font-size: 24px;
   line-height: 37px;
@@ -63,20 +63,21 @@
 
 .goal__text {
   margin: 0;
-  margin-bottom: 23px;
+  margin-bottom: 5px;
+  padding-bottom: 22px;
 
   font-size: 14px;
   line-height: 18px;
   font-family: @font-add;
 
-  border-bottom: 1px solid @color-border-sub;
+  border-bottom: 1px solid @color-border-main;
 }
 
 .goal__link {
   position: relative;
 
   margin-right: auto;
-  padding: 17px 35px 17px 0;
+  padding: 15px 35px 15px 0;
 
   font-size: 16px;
   line-height: 16px;
@@ -99,7 +100,7 @@
   }
 
   &:active {
-    color: fade(@color-text-sub, 30%);
+    opacity: 0.3;
   }
 }
 
