--- a/source/less/blocks/goals.less
+++ b/source/less/blocks/goals.less
@@ -1,5 +1,5 @@
 .goals__item {
-  margin-bottom: 17px;
+  margin-bottom: 22px;
 
   &:last-child {
     margin-bottom: 0;
