--- a/source/less/blocks/guide.less
+++ b/source/less/blocks/guide.less
@@ -27,7 +27,7 @@
   &::after {
     content: "";
     position: absolute;
-    top: 0;
+    top: -2px;
     left: -80px;
 
     width: 60px;
