--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -1,6 +1,6 @@
 .map__scheme {
   width: 100%;
-  height: 400px;
+  height: 365px;
 
   border: none;
 }
@@ -8,8 +8,12 @@
 .map__desc {
   display: flex;
   justify-content: space-between;
-  margin-top: 25px;
-  margin-bottom: 25px;
+  padding-top: 30px;
+  padding-bottom: 25px;
+
+  &--main {
+    background-color: @color-bg-main;
+  }
 }
 
 .map__title {
@@ -25,7 +29,7 @@
 }
 
 .map__address {
-  width: 135px;
+  width: 140px;
 
   font-size: 14px;
   line-height: 20px;
