--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -3,11 +3,11 @@
 }
 
 .page-main__goals {
-  margin-bottom: 15px;
+  margin-bottom: 18px;
 }
 
 .page-main__guide {
-  margin-bottom: 20px;
+  margin-bottom: 45px;
 }
 
 .page-main__title {
