--- a/source/less/blocks/slider.less
+++ b/source/less/blocks/slider.less
@@ -11,7 +11,7 @@
 
 .slider__controls {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   padding: 0 30px;
 }
